--- a/index.html
+++ b/index.html
@@ -133,15 +133,22 @@
             <div class="conteudo-mapa" data-aos="fade-right">
                 <h4 class="subtitulo">Localização</h4>
                 <h2 class="titulo-secao">Atendemos em todo o Vale do Paraíba</h2>
-                <p style="margin-bottom: 24px;">Sede estratégica para atendimento rápido em indústrias, comércios e condomínios.</p>
+                <p style="margin-bottom: 24px;">Distância não é um problema. Possuímos logística otimizada para garantir a segurança hídrica do seu negócio em qualquer cidade do Vale do Paraíba.</p>
                 <ul style="list-style: none; color: var(--text-gray);">
                     <li style="margin-bottom: 10px;"><i class="fa-solid fa-location-dot" style="color: var(--secondary); margin-right: 10px;"></i> Pindamonhangaba - SP</li>
-                    <li style="margin-bottom: 10px;"><i class="fa-solid fa-envelope" style="color: var(--secondary); margin-right: 10px;"></i> contato@hidronexus.com.br</li>
+                    <li style="margin-bottom: 10px;"><i class="fa-solid fa-envelope" style="color: var(--secondary); margin-right: 10px;"></i> hidronexus@hotmail.com</li>
                     <li><i class="fa-brands fa-whatsapp" style="color: var(--secondary); margin-right: 10px;"></i> (12) 99104-7473</li>
                 </ul>
             </div>
             <div class="mapa-wrapper" data-aos="fade-left">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3674.568977112028!2d-45.4600676!3d-22.9293674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ccf03561605555%3A0x7d6c6e76865666!2sPindamonhangaba%2C%20SP!5e0!3m2!1spt-BR!2sbr!4v1700000000000!5m2!1spt-BR!2sbr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe 
+                    width="100%" 
+                    height="100%" 
+                    style="border:0;" 
+                    loading="lazy" 
+                    allowfullscreen
+                    src="https://maps.google.com/maps?q=Pindamonhangaba%2C%20SP&t=&z=10&ie=UTF8&iwloc=&output=embed">
+                </iframe>
             </div>
         </div>
     </section>
@@ -177,10 +184,10 @@
         <div class="container">
             <h3 style="color: white; margin-bottom: 20px;">Hidronexus</h3>
             <div class="social-links">
-                <a href="https://instagram.com/hidronexus"><i class="fa-brands fa-instagram"></i></a>
-                <a href="5512991047473"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://instagram.com/hidronexus" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://wa.me/5512991047473" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
-            <p style="margin-top: 30px; font-size: 0.9rem;">&copy; 2026 Hidronexus. Todos os direitos reservados.</p>
+            <p style="margin-top: 30px; font-size: 0.9rem;">© 2026 Hidronexus. Todos os direitos reservados.</p>
         </div>
     </footer>
 
