novas mudanças para o site hidronexus

--- a/gestao.html
+++ b/gestao.html
@@ -40,7 +40,7 @@
                 </ul>
             </div>
             <div class="img-detalhes">
-                <img src="img/gestao1.jpg" alt="Análise de Água" style="width: 100%; border-radius: 12px; box-shadow: var(--shadow-md);" onerror="this.src='https://images.unsplash.com/photo-1576086213369-97a306d36557?auto=format&fit=crop&w=600&q=80'">
+                <img src="img/tecnico trabalhando1.jpeg" alt="Análise de Água" style="width: 100%; border-radius: 12px; box-shadow: var(--shadow-md);" onerror="this.src='https://images.unsplash.com/photo-1576086213369-97a306d36557?auto=format&fit=crop&w=600&q=80'">
             </div>
         </div>
     </section>
@@ -53,18 +53,18 @@
             </div>
             <div class="grid-galeria">
                 <div class="item-galeria">
-                    <img src="img/gestao2.jpg" alt="Laboratório" onerror="this.src='https://images.unsplash.com/photo-1532094349884-543bc11b234d?auto=format&fit=crop&w=500&q=60'">
+                    <img src="img/antes e depois caixa1.jpeg" alt="Laboratório" onerror="this.src='https://images.unsplash.com/photo-1532094349884-543bc11b234d?auto=format&fit=crop&w=500&q=60'">
                     <div class="legenda-foto">
-                        <h4>Análises Clínicas</h4>
-                        <p>Verificação de potabilidade e parâmetros químicos.</p>
+                        <h4>Higienização de Reservatório</h4>
+                        <p>Limpeza e desinfecção de caixa d'água.</p>
                     </div>
                 </div>
 
                 <div class="item-galeria">
-                    <img src="img/gestao3.jpg" alt="Limpeza de Caixa" onerror="this.src='https://images.unsplash.com/photo-1599818815152-32b500609311?auto=format&fit=crop&w=500&q=60'">
+                    <img src="img/antes e depois caixa2.jpeg" alt="Limpeza de Caixa" onerror="this.src='https://images.unsplash.com/photo-1599818815152-32b500609311?auto=format&fit=crop&w=500&q=60'">
                     <div class="legenda-foto">
                         <h4>Higienização de Reservatório</h4>
-                        <p>Limpeza e desinfecção de caixa d'água industrial.</p>
+                        <p>Limpeza e desinfecção de caixa d'água.</p>
                     </div>
                 </div>
             </div>
