--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p>Soluções integradas de alta performance para poços artesianos, tratamento e controle de qualidade da água para indústrias e condomínios.</p>
             <div class="hero-btns">
                 <a href="https://wa.me/5512991047473" target="_blank" class="btn-primary">
-                    <i class="fa-brands fa-whatsapp"></i> Fale com um Especialista
+                    <i class="fa-brands fa-whatsapp"></i> Fale Conosco
                 </a>
                 <a href="#servicos" class="btn-secondary">Nossas Soluções</a>
             </div>
@@ -66,7 +66,7 @@
                 <h4 class="subtitulo">Sobre a Hidronexus</h4>
                 <h2 class="titulo-secao">Compromisso com a Segurança e Sustentabilidade Hídrica</h2>
                 <p class="destaque-texto" style="font-weight: 600; color: var(--primary); margin-bottom: 16px;">Transformamos desafios complexos em soluções práticas e duradouras.</p>
-                <p>A Hidronexus (CNPJ 53.617.308/0001-47) é referência na manutenção técnica e gestão da qualidade da água. Unimos engenharia de ponta, viabilidade econômica e responsabilidade ambiental para garantir o suprimento seguro e eficiente.</p>
+                <p>A Hidronexus (CNPJ 53.617.308/0001-47) é referência na manutenção técnica e gestão da qualidade da água. Unimos engenharia, viabilidade econômica e responsabilidade ambiental para garantir o suprimento seguro e eficiente.</p>
             </div>
             <div class="imagem-sobre-wrapper" data-aos="fade-left">
                 <img src="img/logo.jpeg" alt="Logo Hidronexus" onerror="this.src='https://images.unsplash.com/photo-1574689049597-7e6df3e2b024?auto=format&fit=crop&w=800&q=80'" class="imagem-sobre">
@@ -119,11 +119,11 @@
             </details>
             <details data-aos="fade-up" data-aos-delay="100">
                 <summary>Vocês emitem laudo técnico?</summary>
-                <p>Sim, todos os nossos serviços acompanham laudos técnicos e ART quando necessário, garantindo conformidade legal.</p>
+                <p>Sim, todos os nossos serviços acompanham laudos técnicos garantindo conformidade legal.</p>
             </details>
             <details data-aos="fade-up" data-aos-delay="200">
                 <summary>Como solicitar um orçamento?</summary>
-                <p>Basta clicar no botão de WhatsApp ou preencher o formulário abaixo. Nossa equipe técnica retornará prontamente.</p>
+                <p>Basta clicar no botão de WhatsApp ou preencher o formulário abaixo. Nossa equipe retornará prontamente.</p>
             </details>
         </div>
     </section>
@@ -158,7 +158,7 @@
             <div class="info-contato" data-aos="fade-right">
                 <h4 class="subtitulo">Fale Conosco</h4>
                 <h2 class="titulo-secao">Solicite uma Visita Técnica</h2>
-                <p>Preencha o formulário e nossa engenharia entrará em contato para entender sua necessidade.</p>
+                <p>Preencha o formulário e entraremos em contato para entender sua necessidade.</p>
                 <a href="https://instagram.com/hidronexus" target="_blank" class="btn-instagram"><i class="fa-brands fa-instagram"></i> Siga no Instagram</a>
             </div>
             
