--- a/pocos.html
+++ b/pocos.html
@@ -56,17 +56,18 @@
             </div>
             <div class="grid-galeria">
                 <div class="item-galeria">
-                    <img src="img/troca bomba.jpeg" alt="Troca de Bomba" onerror="this.src='https://images.unsplash.com/photo-1581092160562-40aa08e78837?auto=format&fit=crop&w=500&q=60'">
+                    <img src="img/trabalho1.jpeg" alt="Troca de Bomba" onerror="this.src='https://images.unsplash.com/photo-1581092160562-40aa08e78837?auto=format&fit=crop&w=500&q=60'">
                     <div class="legenda-foto">
                         <h4>Troca de Bomba Submersa</h4>
-                        <p>Condomínio</p>
+                        <p>Caçapava-SP</p>
                     </div>
                 </div>
 
                 <div class="item-galeria">
-                    <img src="img/limpezapoço.jpeg" alt="Limpeza de Poço" onerror="this.src='https://images.unsplash.com/photo-1504328345606-18bbc8c9d7d1?auto=format&fit=crop&w=500&q=60'">
+                    <img src="img/pocçolimpando.jpeg" alt="Limpeza de Poço" onerror="this.src='https://images.unsplash.com/photo-1504328345606-18bbc8c9d7d1?auto=format&fit=crop&w=500&q=60'">
                     <div class="legenda-foto">
                         <h4>Limpeza Química e Mecânica</h4>
+                        <p>Jambeiro-SP</p>
                     </div>
                 </div>
             </div>
