--- a/tratamento.html
+++ b/tratamento.html
@@ -35,13 +35,13 @@
                 
                 <ul class="lista-servicos">
                     <li><i class="fa-solid fa-check-circle"></i> Instalação de bombas dosadoras</li>
-                    <li><i class="fa-solid fa-check-circle"></i> Filtração central (Filtros de Areia/Carvão)</li>
+                    <li><i class="fa-solid fa-check-circle"></i> Filtração</li>
                     <li><i class="fa-solid fa-check-circle"></i> Correção de pH e turbidez</li>
                     <li><i class="fa-solid fa-check-circle"></i> Manutenção de sistemas existentes</li>
                 </ul>
             </div>
             <div class="img-detalhes">
-                <img src="img/tratamento1.jpg" alt="Sistema de Tratamento" style="width: 100%; border-radius: 12px; box-shadow: var(--shadow-md);" onerror="this.src='https://images.unsplash.com/photo-1574360777085-7973eb7f9888?auto=format&fit=crop&w=600&q=80'">
+                <img src="img/dosadora de cloro 2.jpeg" alt="Sistema de Tratamento" style="width: 100%; border-radius: 12px; box-shadow: var(--shadow-md);" onerror="this.src='https://images.unsplash.com/photo-1574360777085-7973eb7f9888?auto=format&fit=crop&w=600&q=80'">
             </div>
         </div>
     </section>
@@ -54,7 +54,7 @@
             </div>
             <div class="grid-galeria">
                 <div class="item-galeria">
-                    <img src="img/tratamento2.jpg" alt="Dosadora" onerror="this.src='https://images.unsplash.com/photo-1621905251189-08b95d5075d5?auto=format&fit=crop&w=500&q=60'">
+                    <img src="img/dosadora de cloro.jpeg" alt="Dosadora" onerror="this.src='https://images.unsplash.com/photo-1621905251189-08b95d5075d5?auto=format&fit=crop&w=500&q=60'">
                     <div class="legenda-foto">
                         <h4>Sistema de Cloração</h4>
                         <p>Instalação de bomba dosadora automatizada.</p>
@@ -62,10 +62,10 @@
                 </div>
 
                 <div class="item-galeria">
-                    <img src="img/tratamento3.jpg" alt="Painel" onerror="this.src='https://images.unsplash.com/photo-1581092335397-9583eb92d232?auto=format&fit=crop&w=500&q=60'">
+                    <img src="img/instalação padrão.jpeg" alt="Painel" onerror="this.src='https://images.unsplash.com/photo-1581092335397-9583eb92d232?auto=format&fit=crop&w=500&q=60'">
                     <div class="legenda-foto">
                         <h4>Monitoramento de Qualidade</h4>
-                        <p>Painel de controle de parâmetros químicos.</p>
+                        <p>Instalação.</p>
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
             <h2>Quer garantir a qualidade da sua água?</h2>
             <p style="margin-bottom: 30px; color: var(--text-gray);">Fale com a Hidronexus e dimensione o sistema ideal.</p>
             <a href="https://wa.me/5512991047473?text=Olá, vi a página de Tratamento no site e gostaria de um orçamento." target="_blank" class="btn-orcamento">
-                <i class="fa-brands fa-whatsapp"></i> Falar com Especialista
+                <i class="fa-brands fa-whatsapp"></i> Fale conosco
             </a>
         </div>
     </section>
