mudanças no site

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <h4 class="subtitulo">Fale Conosco</h4>
                 <h2 class="titulo-secao">Solicite uma Visita Técnica</h2>
                 <p>Preencha o formulário e entraremos em contato para entender sua necessidade.</p>
-                <a href="https://instagram.com/hidronexus" target="_blank" class="btn-instagram"><i class="fa-brands fa-instagram"></i> Siga no Instagram</a>
+                <a href="https://instagram.com/hidro_nexus" target="_blank" class="btn-instagram"><i class="fa-brands fa-instagram"></i> Siga no Instagram</a>
             </div>
             
             <form id="meuFormulario" class="form-premium" data-aos="fade-left">
@@ -184,7 +184,7 @@
         <div class="container">
             <h3 style="color: white; margin-bottom: 20px;">Hidronexus</h3>
             <div class="social-links">
-                <a href="https://instagram.com/hidronexus" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://instagram.com/hidro_nexus" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://wa.me/5512991047473" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
             <p style="margin-top: 30px; font-size: 0.9rem;">© 2026 Hidronexus. Todos os direitos reservados.</p>
