Atualização do site com novos conteúdos e melhorias visuais

--- a/index.html
+++ b/index.html
@@ -181,15 +181,36 @@
     </section>
 
     <footer>
-        <div class="container">
-            <h3 style="color: white; margin-bottom: 20px;">Hidronexus</h3>
-            <div class="social-links">
-                <a href="https://instagram.com/hidro_nexus" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://wa.me/5512991047473" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-            <p style="margin-top: 30px; font-size: 0.9rem;">© 2026 Hidronexus. Todos os direitos reservados.</p>
+    <div class="container footer-grid">
+        
+        <div class="footer-col">
+            <h3>Hidronexus</h3>
+            <p>Soluções completas.<br>
+                 Garantimos água de qualidade e poços artesianos eficientes para seu empreendimento ou residência no Vale do Paraíba.</p>
         </div>
-    </footer>
+
+        <div class="footer-col">
+            <h4>Serviços</h4>
+            <ul class="footer-links">
+                <li><a href="gestao.html"><i class="fa-solid fa-chevron-right" style="font-size: 12px;"></i> Gestão da Qualidade</a></li>
+                <li><a href="pocos.html"><i class="fa-solid fa-chevron-right" style="font-size: 12px;"></i> Poços Artesianos</a></li>
+                <li><a href="tratamento.html"><i class="fa-solid fa-chevron-right" style="font-size: 12px;"></i> Tratamento e Dosagem</a></li>
+                <li><a href="index.html#contato"><i class="fa-solid fa-chevron-right" style="font-size: 12px;"></i> Fale Conosco</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-col">
+            <h4>Contato</h4>
+            <p><i class="fa-brands fa-whatsapp" style="color: var(--secondary); width: 20px;"></i> (12) 99104-7473</p>
+            <p><i class="fa-solid fa-envelope" style="color: var(--secondary); width: 20px;"></i> contato@hidronexus.com.br</p>
+            <p><i class="fa-solid fa-location-dot" style="color: var(--secondary); width: 20px;"></i> Vale do Paraíba - SP</p>
+        </div>
+    </div>
+
+    <div class="container copyright">
+        <small>&copy; 2026 Hidronexus. Todos os direitos reservados.</small>
+    </div>
+</footer>
 
     <a href="https://wa.me/5512991047473" target="_blank" class="btn-zap-flutuante" aria-label="Falar no WhatsApp">
         <i class="fa-brands fa-whatsapp"></i>
