--- a/pocos.html
+++ b/pocos.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Manutenção de poços artesianos, troca de bomba submersa, limpeza de poços e recuperação de vazão. Atendimento especializado em SP.">
+<link rel="icon" type="image/jpeg" href="img/logo_simples.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poços Artesianos - Hidronexus</title>
     
@@ -84,11 +86,36 @@
         </div>
     </section>
 
-    <footer class="footer-interna">
-        <div class="container">
-            <p>&copy; 2026 Hidronexus. Todos os direitos reservados.</p>
+    <footer>
+    <div class="container footer-grid">
+        
+        <div class="footer-col">
+            <h3>Hidronexus</h3>
+            <p>Soluções completas.<br>
+                 Garantimos água de qualidade e poços artesianos eficientes para seu empreendimento ou residência no Vale do Paraíba.</p>
         </div>
-    </footer>
 
+        <div class="footer-col">
+            <h4>Serviços</h4>
+            <ul class="footer-links">
+                <li><a href="gestao.html"><i class="fa-solid fa-chevron-right" style="font-size: 12px;"></i> Gestão da Qualidade</a></li>
+                <li><a href="pocos.html"><i class="fa-solid fa-chevron-right" style="font-size: 12px;"></i> Poços Artesianos</a></li>
+                <li><a href="tratamento.html"><i class="fa-solid fa-chevron-right" style="font-size: 12px;"></i> Tratamento e Dosagem</a></li>
+                <li><a href="index.html#contato"><i class="fa-solid fa-chevron-right" style="font-size: 12px;"></i> Fale Conosco</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-col">
+            <h4>Contato</h4>
+            <p><i class="fa-brands fa-whatsapp" style="color: var(--secondary); width: 20px;"></i> (12) 99104-7473</p>
+            <p><i class="fa-solid fa-envelope" style="color: var(--secondary); width: 20px;"></i> contato@hidronexus.com.br</p>
+            <p><i class="fa-solid fa-location-dot" style="color: var(--secondary); width: 20px;"></i> Vale do Paraíba - SP</p>
+        </div>
+    </div>
+
+    <div class="container copyright">
+        <small>&copy; 2026 Hidronexus. Todos os direitos reservados.</small>
+    </div>
+</footer>
 </body>
 </html>
