Novas mudanças para o site da Hidronexus, incluindo a adição de um novo arquivo 404.html e atualizações nos arquivos gestao.html, index.html, pocos.html, style.css e tratamento.html. As mudanças incluem a adição de meta descrições para melhorar o SEO e a atualização do endereço de e-mail de contato para

--- a/pocos.html
+++ b/pocos.html
@@ -108,7 +108,7 @@
         <div class="footer-col">
             <h4>Contato</h4>
             <p><i class="fa-brands fa-whatsapp" style="color: var(--secondary); width: 20px;"></i> (12) 99104-7473</p>
-            <p><i class="fa-solid fa-envelope" style="color: var(--secondary); width: 20px;"></i> contato@hidronexus.com.br</p>
+            <p><i class="fa-solid fa-envelope" style="color: var(--secondary); width: 20px;"></i> hidronexus@hotmail.com</p>
             <p><i class="fa-solid fa-location-dot" style="color: var(--secondary); width: 20px;"></i> Vale do Paraíba - SP</p>
         </div>
     </div>
