--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="google-site-verification" content="KbYhYFeGACdJN6AebxcqA9LMCbNAAfAWdPegXE82Gdw" />
     <meta name="description" content="Hidronexus: Especialistas em manutenção de poços artesianos, tratamento de água e gestão da qualidade no Vale do Paraíba. Solicite um orçamento.">
     <meta name="keywords" content="poço artesiano, limpeza de poço, tratamento de água, análise de água, hidronexus, vale do paraíba, outorga">
     <meta name="author" content="Hidronexus">
